--- a/assets/css/patrick-tech.css
+++ b/assets/css/patrick-tech.css
@@ -10,6 +10,8 @@
     --color4: rgba(255, 180, 0, 1);
     --color1: rgba(0, 166, 237, 1);
     --color2: #000; 
+    --gradient1: #00a6ed;
+    --gradient2: hsla(174, 100%, 46%, 1);
     /* rgba(127, 184, 0, 1); */
     /* $color5: rgba(13, 44, 84, 1); */
     /* --progress-color2: rgba(0, 166, 237, 1);
@@ -29,7 +31,7 @@ body {
     flex-direction: column;
 }
 .site-wrap {
-    background: linear-gradient(#00a6ed, var(--color2) );
+    background: linear-gradient(var(--gradient1), var(--gradient2));
     overflow: hidden;
     min-height: 100%;
     flex: 1;
@@ -37,10 +39,10 @@ body {
 .profile-box {
     margin:4rem auto;
     font-family: sans-serif;
-    max-width: 21rem;
+    max-width: 24rem;
     /* border: 1px solid #000; */
     box-shadow: 14px 14px 24px -1px rgba(3,3,3,0.19);
-    padding: 1.5rem;
+    /* padding: 1.5rem; */
     background: #fff url(../images/technology-1283624_1280.jpg) no-repeat center top;
     background-size: contain;
     overflow: hidden;
@@ -55,7 +57,7 @@ body {
     /* background: linear-gradient(var(--color3), var(--color4)); */
     width: 60rem;
     height: 60rem;
-    margin: -5rem -20rem 0 -20rem;
+    margin: -5rem -20rem 0 -18rem;
     border-radius: 100rem;
     position: absolute;
     z-index: 1;
@@ -64,6 +66,7 @@ body {
 .profile-text {
     position: relative;
     z-index: 2;
+    margin: 1.5rem;
 }
 .profile-pic {
     width:6rem;
@@ -154,4 +157,35 @@ h1 span {
 
 .profile-text > p:last-child {
     margin:0;
+}
+
+/* .contact-email a+a {
+    display: none;
+} */
+
+.contact {
+    display: flex;
+    padding: 0;
+    margin: 0;
+}
+.contact-item {
+    display: block;
+    list-style: none;
+    flex: 1;
+    text-align: center;
+    margin: 0;
+}
+.contact-item a {
+    color: #fff;
+    font-size: 2rem;
+}
+.contact-item a:hover {
+    color: #000;
+}
+.profile-bottom {
+    /* margin: 0 -2rem -1rem -2rem; */
+    background: var(--gradient1);
+    position: relative;
+    z-index: 2;
+    padding: 1rem 0;
 }
