--- a/assets/css/patrick-tech.css
+++ b/assets/css/patrick-tech.css
@@ -57,11 +57,12 @@ body {
     /* background: linear-gradient(var(--color3), var(--color4)); */
     width: 60rem;
     height: 60rem;
-    margin: -5rem -20rem 0 -18rem;
+    margin: -5rem -30rem 0 -30rem;
     border-radius: 100rem;
     position: absolute;
     z-index: 1;
     background: #fff;
+    left: 50%;
 }
 .profile-text {
     position: relative;
