--- a/assets/css/patrick-tech.css
+++ b/assets/css/patrick-tech.css
@@ -47,6 +47,7 @@ body {
     background-size: contain;
     overflow: hidden;
     position: relative;
+    padding-top: 1.5rem;
 }
 .subheading {
     font-size: 1rem;
