--- a/assets/css/patrick-tech.css
+++ b/assets/css/patrick-tech.css
@@ -39,7 +39,7 @@ body {
 .profile-box {
     margin:4rem auto;
     font-family: sans-serif;
-    max-width: 24rem;
+    max-width: 26rem;
     /* border: 1px solid #000; */
     box-shadow: 14px 14px 24px -1px rgba(3,3,3,0.19);
     /* padding: 1.5rem; */
@@ -123,7 +123,10 @@ h1 span {
     font-size: 0.9rem;
     color: #000;
     margin-bottom: 0.1rem;
-    display: block;
+    display: flex;
+}
+.skill-name small {
+    margin-left: auto;
 }
 .skill-progress {
     /* Reset the default appearance */
